# paravis

./: README.md
src/atriumModel/parallel/: CMakeLists.txt  README.md  cell.cu  cell.cuh  execution.sh  simulation1D-CN.cc  simulation2D-CN.cc  simulation2D-CN.cu
src/atriumModel/parallel/utilities/: CMakeLists.txt  cell.cc  cell.h
src/atriumModel/pythonScripts/: PA_celular.py  nuevoTest.py  propagacion.py  test.py
src/atriumModel/testDispersa/: ejemplo.cu
src/atriumModel/visual/: CMakeLists.txt  cell.cu  cell.cuh  execution.sh  paravisAdaptor.cxx  paravisAdaptor.h  simulation2D-CN.cu  visual.cc  visual.cxx
src/atriumModel/visual/animations/: BCL1500ms160x160.ogv
src/paraviewGraphics/: PA_celular.py  test.py
tests/: README.md  coprocessing-pipeline.py  driver.py
